# camera2Vk

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidCameraPermission.cpp  AndroidCameraPermission.h  CameraImageReader.cpp  CameraManager.cpp  CameraManager.h  Common.h  FpsCollector.cpp  FpsCollector.h  Geometry.h  Main.cpp  Main1.cpp  ProfileTrace.cpp  ProfileTrace.h  Texture.cpp  VkBundle.h  VkCameraImage.cpp  VkCameraImage.h  VkHelper.cpp  VkHelper.h  VkShaderParam.h  VulkanCommon.h
app/src/main/cpp/Camera/: CameraImageReader.cpp  CameraImageReader.h  CameraManager.cpp
app/src/main/cpp/GL/: GLRenderer.cpp  GLRenderer.h  GLShaderUtil.h
app/src/main/cpp/VK/: Geometry.cpp  Texture.h  VKRenderer.cpp  VKRenderer.h  VkBundle.h  VkCameraImage.h  VkCameraImageV2.cpp  VkCameraImageV2.h  VkHelper.cpp  VkHelper.h  VkShaderParam.h  VulkanCommon.h
app/src/main/res/values/: strings.xml
app/src/main/shaders/: demo001.frag  demo001.frag.spv  demo001.vert  demo001.vert.spv
app/src/vulkan_wrapper/: vulkan_wrapper.c  vulkan_wrapper.h
gradle/wrapper/: gradle-wrapper.properties
